feat: product patch
